syntax = "proto3";

option java_multiple_files = true;
option java_package = "framewk.grpc.greeting";
option java_outer_classname = "HelloWorldProto";
option objc_class_prefix = "HLW";

package yakir.greeting;

enum Gender {
    Male = 0;
    FeMale = 1;
}

message HelloRequest {
    string name = 1;
    int32 age = 2;
    map<string, string> hobbies = 3;
    Gender gender = 4;
}

message HelloResponse {
    string message = 1;
}

service Greeter {
    rpc SayHello (HelloRequest) returns (HelloResponse) {
    }
}
